# nomifun-tauri

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  Dockerfile  NOTICE  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  design-qa.md  docker-compose.yml  package.json
.github/workflows/: README.md  command-reliability.yml
apps/build-support/: ui_build_manifest.rs
apps/desktop/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/signing/: .env.release.example
apps/desktop/src/: companion_pointer.rs  main.rs  memory_panel_window.rs  updater_install_context.rs
apps/desktop/updater/: AUTO-UPDATE-PLAN.md  README.md  README.zh-CN.md  latest.json
apps/web/: Cargo.toml  build.rs
apps/web/src/: main.rs
crates/agent/nomi-browser-engine/: Cargo.toml
crates/agent/nomi-computer/: Cargo.toml
crates/agent/nomi-config/: Cargo.toml
crates/agent/nomi-mcp/: Cargo.toml
crates/agent/nomi-tools/: Cargo.toml
crates/backend/nomifun-ai-agent/: Cargo.toml
crates/backend/nomifun-app/: Cargo.toml  build.rs
crates/backend/nomifun-common/: Cargo.toml
crates/backend/nomifun-companion/: Cargo.toml
crates/backend/nomifun-conversation/: Cargo.toml
crates/backend/nomifun-creation/: Cargo.toml
crates/backend/nomifun-extension/: Cargo.toml
crates/backend/nomifun-gateway/: Cargo.toml
crates/backend/nomifun-idmm/: Cargo.toml
crates/backend/nomifun-knowledge/: Cargo.toml
crates/backend/nomifun-orchestrator/: Cargo.toml
crates/backend/nomifun-public/: Cargo.toml
crates/backend/nomifun-public-agent/: Cargo.toml
crates/backend/nomifun-public-agent/src/: audit.rs  config.rs  fsio.rs  lib.rs  provider.rs  registry.rs  routes.rs  service.rs
crates/backend/nomifun-realtime/: Cargo.toml
crates/backend/nomifun-shell/: Cargo.toml
crates/backend/nomifun-system/: Cargo.toml
crates/backend/nomifun-terminal/: Cargo.toml
crates/backend/nomifun-webhook/: Cargo.toml
crates/backend/nomifun-workshop/: Cargo.toml
crates/backend/nomifun-workshop/src/: agent_ops.rs  archive.rs  docscan.rs  dto.rs  lib.rs  routes.rs  service.rs  thumbnail.rs
crates/shared/: README.md
crates/shared/nomi-execution/: Cargo.toml
crates/shared/nomifun-net/: Cargo.toml
crates/shared/nomifun-net/src/: proxy.rs
docs/: README.md  README.zh.md
docs/architecture/: agent-execution.zh.md  backend-crates.md  backend-crates.zh.md  data-and-storage.md  data-and-storage.zh.md  id-system.md  id-system.zh.md  overview.md  overview.zh.md
docs/continuity/: 00-current-state.md  01-target-id-architecture.zh.md  02-table-classification.zh.md  03-v3-reset-execution-plan.zh.md  04-verification-gates.zh.md  05-handoff-template.md  06-open-questions.zh.md  README.md  README.zh.md
docs/continuity/decisions/: ID-001-current-v2.md  ID-002-layered-id-v3.md  ID-003-bare-uuidv7.md  ID-004-v3-hard-reset.md  ID-005-logical-references-autoincrement.md
docs/contributing/: data-and-identifier-standards.md  data-and-identifier-standards.zh.md  development.md  development.zh.md  project-structure.md  project-structure.zh.md
docs/getting-started/: installation.md  installation.zh.md
docs/guides/: autowork-requirements.md  autowork-requirements.zh.md  computer-browser-use.md  computer-browser-use.zh.md  desktop-app.md  desktop-app.zh.md  scheduled-tasks.md  scheduled-tasks.zh.md  terminal.md  terminal.zh.md
docs/images/: SCREENSHOTS.md
docs/maintenance/: local-ai-lite-artifacts.md
docs/reference/: configuration.md  configuration.zh.md  troubleshooting.md  troubleshooting.zh.md
docs/superpowers/handoffs/: 2026-07-10-agent-reliability-wave-a-pause.md
docs/superpowers/plans/: 2026-06-26-multi-agent-orchestrator-P1a.md  2026-06-27-conversation-native-orchestration-P1.md  2026-06-27-conversation-native-orchestration-P2.md  2026-06-27-conversation-native-orchestration-P3.md  2026-06-27-conversation-native-orchestration-P4.md  2026-06-27-conversation-native-orchestration-P5.md  2026-06-27-conversation-native-orchestration-P6.md  2026-06-27-multi-agent-orchestrator-P1b.md  2026-06-27-multi-agent-orchestrator-P3a.md  2026-06-27-multi-agent-orchestrator-P3b.md  2026-06-28-orchestration-tab-capabilities-P1-backend.md  2026-06-28-orchestration-tab-redesign-P2-build-tab.md  2026-06-28-orchestration-tab-redesign-P3-remove-glue.md  2026-06-29-orchestrator-phase3-conversational-replan.md  2026-06-29-orchestrator-ultracode-patterns.md  2026-06-29-terminal-improvements.md  2026-06-30-conversation-native-orchestration-v2.md  2026-07-04-phase0-subagent-standardization.md  2026-07-04-phase1a-reliability.md  2026-07-04-phase1b-shared-context.md  2026-07-04-phase2-capability-routing.md  2026-07-04-phase3a-dynamic-dispatch.md  2026-07-04-phase3b-autonomous-nesting.md  2026-07-04-provider-deletion-guard.md  2026-07-05-node-config-into-composer.md  2026-07-06-agent-cluster.md  2026-07-07-multimodal-model-hub.md  2026-07-07-superpowers-integration.md  2026-07-09-channel-outbound-image-send.md  2026-07-10-autowork-empty-state.md  (+19 more)
scripts/: bump-version.mjs  check-agent-vocabulary.mjs  check-icon-imports.mjs  check-process-runtime-boundary.mjs  check-ui-build-manifest.test.ts  desktop-build-linux.sh  desktop-build-mac.sh  desktop-build-win.ps1  make-latest-json.mjs  make-latest-json.test.mjs  prune-build.mjs  release-linux.sh  release-win.ps1  run-linux-release.mjs  run-win-release.mjs  scripts.json  test-desktop-build-linux-args.sh  test-desktop-build-mac-args.sh  test-release-linux-no-push.sh  test-rust.mjs  ui-build-manifest.ts
ui/: _shot_analyze.py  package.json  vite.config.ts
(+1630 files in other folders)
