[package]
name = "nomifun-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

# The Tauri desktop shell: links the unified backend (nomifun-app) in-process.
# It is a member of the root workspace and inherits the workspace version
# (`version.workspace = true` above) — so `bun run bump` / the workspace version
# is the single source the packaged app version derives from.

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json.workspace = true

[dependencies]
# The unified backend, linked in-process (no spawned binary, no bundled-nomicore).
# computer-use: the desktop host is the one place screen/input control is sane.
# browser-use: likewise, the desktop host is where a managed/connected Chromium
# is sane (the in-process self-hosted CDP engine).
nomifun-app = { workspace = true, features = ["computer-use", "browser-use"] }
nomifun-common.workspace = true
nomifun-runtime.workspace = true
clap.workspace = true

# `macos-private-api` is required for the transparent nomi companion window on macOS.
# `tray-icon` powers the system tray (close-to-tray default + tray Show/Quit menu).
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
# `deep-link` feature is REQUIRED for runtime deep links on Windows/Linux: those
# OSes deliver `nomifun://` as argv to a second process, which single-instance
# intercepts. Only with this feature does single-instance forward that argv into
# the deep-link plugin so `on_open_url` fires while the app is already running
# (macOS uses Apple Events and is unaffected). Without it the link is silently
# dropped. single-instance must also be registered FIRST (see main.rs), which it is.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"

# 跨平台保持唤醒:阻止系统空闲休眠(macOS=IOPMAssertion via objc2-io-kit,
# Windows=SetThreadExecutionState via windows crate)。仅阻止系统休眠,不阻止显示器息屏。
keepawake = "0.6"

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSResponder",
    "NSView",
    "NSWindow",
] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }

[dev-dependencies]
tempfile.workspace = true

# Tests build a real NTFS junction inside the fake legacy tree (the same
# primitive nomifun-extension's skill_service materializes workspace skill
# links with) to prove the data relocation skips links instead of failing.
[target.'cfg(windows)'.dev-dependencies]
junction = "1"
