[package]
name = "nomifun-public-agent"
version.workspace = true
edition.workspace = true

[dependencies]
nomifun-common.workspace = true
nomifun-db.workspace = true
nomifun-api-types.workspace = true
nomifun-auth.workspace = true
nomifun-ai-agent.workspace = true
nomifun-preset.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
async-trait.workspace = true
tempfile.workspace = true

[dev-dependencies]
